@@ -1,4 +1,6 @@
 DIST v1.6.2.tar.gz 1102370 SHA256 c9ddb59d14a2cb04d00db07fcd90f3de07f9ae1f2fb0f21783db8e9a242991ed SHA512 ca24b96d270c3b880557baced1aa5a08f9ad11845cdab5e30b2c03381b3bfcad2b7e16310d5672efca75a7cbd1e47079f7c18083322cc56412a16a9968ea1033 WHIRLPOOL 9f8821d96433544b8aba19e813785febc18691ef7f821eb5193f4d6a37cfa2e1090e380389debb54ade4af85232b3b4b27c84e8770fb166e0a4bab160ff2f2de
+DIST v2.0.2.tar.gz 725025 SHA256 949262912bc07f8d1ec72dfa1bbeafb0ed1cea992589e1ee5901e0630c714261 SHA512 99d1946d959c64977a35470b3eb67183c0d5643f51d838809c628ffb12964d5bfcb5b82b32f289a0bfcf70e105014f856ebba8b514b3f1ad00b5c2bb551c5dee WHIRLPOOL fb6b91749c0f0d5ba3df620f012d577eeb37278b70b6b825e1eeff0a5634ee48436d4be80391b7ee2310be47a7b1e0decb2fcfeadc86749e927e8a4ac3a0016f
 EBUILD feedreader-1.6.2.ebuild 1496 SHA256 f3fdb4dc65f70c6bfd4f8f5abcd434394fcf5a10527f5a06b26c4598e67f27da SHA512 737550f382cf2c6e5d03a2b84ef2e65900097755462d87abb25cb720fa74b56355e0ec2a97f8dfdde34272bcf4c98bb88ed2a04e1ca3f4a6e129b2195d6af7f4 WHIRLPOOL 148adb09690421fab5451cf9f4422cc0567b1c4538753a2b3757eb8c9e2728d40c7cb394d8ca31710666102dbeb5c54a3a04d8e34da57a6984f8c6f1ec604600
-MISC ChangeLog 959 SHA256 053ed17857d401d1df48879dbc03db6021746c6717e3b069f82bb85238e02c83 SHA512 b5a0cfbb228166bff545ec6bb646d37c6868c8dd65477ba13761306aeb53c75d9b411a3961b2e87028994c9ff8f2e64a8dd0f99a50dfd80861417fd49b86d0ff WHIRLPOOL 4836b2647864da9be5ac9e944315811aae63b5c5e8833576a4c13f9ad5fdb60ba9cdafa70c30b523a5793226b2372f63ce75afe23ccaddef1954010f84976ebd
+EBUILD feedreader-2.0.2.ebuild 1458 SHA256 53e10f4a56362b34a9109d6a0d0782cc4614b40e5883a20273f0daf9aae4928d SHA512 904366b92351a0c30a37d3095d137fbd5962c9f2169d5e030f619034146b8a31fb91fdbd041d6167dfc1507d3c0b8714773e97f3bdd2b6df91af0af4b5996713 WHIRLPOOL 7cbd4e46dc055c072c9a782abf2806ffff1e417cd7eed749dc3177fe13583118c7bf56db0e39a64ace6c1f3f711572486d20dbac090f3172f543870dfdd9e83b
+MISC ChangeLog 1123 SHA256 eca409d5158c9bb22738458aa7f06fbf654fb1f82ed44ad41a2973d0811141a9 SHA512 77fd9da4fcffef8b1b5f622d65273ac8047fc4cdfdeb3f9de6eb49e39c6575c881b1deddcbdc39f0575c7cbdfc93947dce82a7faba2df5e1f41ef48367a1a571 WHIRLPOOL 0974844fad3eadd44cefa508d4c665bbdafc2fe501b55c2d40452f19e76553811a06dbf14e482af049aaf136ba4a56f8265e03f60a360ece2618ea62f1778938
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
